@startuml



entity CategoryHukum{
    **id :int <<PK>>**
    --
    nama :varchar
    singkatan_nama :varchar
    slug :varchar
}

entity ProductHukum{
    **id :int <<PK>>**
    category_hukum_id : int <<FK>>
    tipe_dokument_hukum_id : int <<FK>>
    --
    nama :varchar
    deskripsi :varchar
    judul :varchar
    tahun :varchar
    tempat_penetapan : varchar
    tanggal_penetapan : varchar
    tanggal_pengundangan : varchar
    taggal_berlaku : varchar
    sumber : varchar
    status :enum
    bahasa : varchar
    lokasi : varchar
    teu : varchar
    bidang : varchar
    mengubah : varchar
    diubah : varchar
    mencabut : varchar
    dicabut : varchar
    file : varchar
    slug : varchar
}


entity SubjekProdukHukum{
    **id :int <<PK>>**
    --
    subjek_hukum_id :int <<FK>>
    produk_hukum_id :int <<FK>>
}

entity SubjekHukum{
    **id :int <<PK>>**
    --
    nama :varchar
    slug :varchar
}



entity AbstrakHukum{
    **id :int <<PK>>**
    produk_hukum_id :int <<FK>>
    --
    nama :varchar
    materi_pokok :text
    abstract :text
    catatan :text
    slug :varchar
}

entity TipeDokumentHukum{
    **id :int <<PK>>**
    --
    nama :varchar
    slug :varchar
}

entity User{
    **id :int <<PK>>**
    --
    nama :varchar
    username :varchar
    password :varchar
}



CategoryHukum||--o{ProductHukum
TipeDokumentHukum||--o{ProductHukum
ProductHukum ||--|{SubjekProdukHukum
SubjekHukum ||--|{SubjekProdukHukum
ProductHukum ||--o|AbstrakHukum





@enduml